--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.3",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/preact": "^3.2.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@iconify-json/mdi": "^1.1.66",
+    "astro": "^4.6.3",
+    "astro-icon": "^1.1.0",
+    "preact": "^10.20.2",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.1"
   }
 }
