--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^4.6.3",
     "astro-icon": "^1.1.0",
     "preact": "^10.20.2",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
