--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,5 @@
   "[astro]": {
     "editor.defaultFormatter": "astro-build.astro-vscode"
   },
-  "[svelte]": {
-    "editor.defaultFormatter": "svelte.svelte-vscode"
-  }
+  "editor.defaultFormatter": "biomejs.biome"
 }
