--- a/biome.json
+++ b/biome.json
@@ -10,8 +10,12 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"correctness": {
+				"useExhaustiveDependencies": "off"
+			},
 			"a11y": {
-				"useMediaCaption": "off"
+				"useMediaCaption": "off",
+				"useButtonType": "off"
 			}
 		}
 	}
