--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "^18.2.25",
     "astro": "^4.7.0",
     "astro-icon": "^1.1.0",
+    "js-confetti": "^0.12.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.3",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
-    "@iconify/react": "^4.1.1"
+    "@iconify/react": "^4.1.1",
+    "@types/lodash": "^4.17.1"
   }
 }
